<resources>
    <string name="app_name">Practicum-Android-Diploma</string>

    <string name="vacancy_search">Поиск вакансий</string>
    <string name="enter_query">Введите запрос</string>
    <string name="empty_list">Список пуст</string>

    <!-- Bottom menu-->
    <string name="menu_main_title">Главная</string>
    <string name="menu_favorites_title">Избранное</string>
    <string name="menu_team_title">Команда</string>

    <!-- Кнопки-->
    <string name="back_button_description">Назад</string>
    <string name="share_button_description">Поделиться</string>
    <string name="favorite_button_description">Избранное</string>


    <!-- Vacancy Details Screen -->
    <string name="details_title">Вакансия</string>
    <string name="city">Город</string>
    <string name="company_title">Компания</string>
    <string name="experience_title">Требуемый опыт</string>
    <string name="responsibilities">Обязанности</string>
    <string name="job_description">Описание вакансии</string>
    <string name="requirements">Требования</string>
    <string name="conditions">Условия</string>
    <string name="skills">Ключевые навыки</string>
    <string name="salary_not_specified">Зарплата не указана</string>
    <string name="share_vacancy">Поделиться вакансией</string>
    <string name="no_vacancy">Таких вакансий нет</string>


    <!-- Примеры текстов для заполнения -->
    <string name="example_of_experience_text">От 1 года до 3 лет</string>
    <string name="example_of_schedule_text">Полная занятость, Удаленная работа</string>
    <string name="example_of_skills_text">• Знание классических алгоритмов и структуры данных\n•  Программирование для Android больше одного года\n•  Знание WebRTC</string>
    <string name="example_of_responsibilities_text">• Разрабатывать новую функциональность приложения\n• Помогать с интеграцией нашего SDK в другие приложения\n• Проектировать большие новые модули\n• Писать UI- и unit-тесты\n• Следить за работоспособностью сервиса и устранять технический долг</string>
    <string name="example_of_requirements_text">• 100% Kotlin\n• WebRTC\n• CI по модели Trunk Based Development</string>
    <string name="example_of_conditions_text">• сильная команда, с которой можно расти\n• возможность влиять на процесс и результат\n• расширенная программа ДМС: стоматология, обследования, вызов врача на дом и многое другое</string>

    <!-- Блок контакты -->
    <string name="contacts">Контакты</string>
    <string name="contacts_name">Контакты ФИО</string>
    <string name="contacts_phones">Контактный телефон</string>
    <string name="contacts_email">Email</string>

    <!-- Ошибки для контактов -->
    <string name="no_email_app">Не найдено приложение для отправки email</string>
    <string name="no_phone_app">Не найдено приложение для звонков</string>
    <string name="empty_result">Не удалось получить список вакансий</string>
    <string name="error_no_internetConnection">Нет интернета</string>


    <!-- Ошибки-->
    <string name="error_get_list_of_vacancies">Не удалось получить\n список вакансий</string>
    <string name="error_get_list">Не удалось получить\n список</string>
    <string name="vacancy_not_found">Вакансия не найдена или\nудалена</string>
    <string name="error_server">Ошибка сервера</string>

    <!-- Команда -->
    <string name="team">Команда</string>
    <string name="work_on_app">Над приложением работали</string>
    <string name="developer1">Татьяна Гамма</string>
    <string name="developer2">Алексей Ненашев</string>
    <string name="developer3">Данила Ротман</string>

    <!-- Filers Screen -->
    <string name="fiters_title">Настройки фильтрации</string>
    <string name="filter_area">Место работы</string>
    <string name="filter_industry">Отрасль</string>
    <string name="salary_hint">Введите сумму</string>
    <string name="salary_checkBox">Не показывать без зарплаты</string>
    <string name="button_apply">Применить</string>
    <string name="button_resert">Сбросить</string>
    <string name="salary_label">Ожидаемая зарплата</string>

    <!-- Отрасль -->
    <string name="industry_title">Наименование отрасли</string>
    <string name="choosing_industry_title">Выбор отрасли</string>
    <string name="hint_industries">Введите отрасль</string>
    <string name="select">Выбрать</string>
    <string name="industries_list_empty">Список отраслей пуст</string>
    <string name="search_empty_results">Ничего не найдено</string>
    <string name="area_ilter_toast">Фильтр находится в разработке</string>
    <string name="error_no_such_industry">Нет такой отрасли</string>


    <!-- Зарплата -->
    <string name="salary_from_to">от %1$s до %2$s %3$s</string>
    <string name="salary_from">от %1$s %2$s</string>
    <string name="salary_to">до %1$s %2$s</string>

</resources>
