<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/bigTextSize"
        android:text="@string/team" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/ys_display_bold"
        android:textSize="@dimen/veryBigTextSize"
        android:text="@string/work_on_app" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/developer1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/developer2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/developer3" />

</LinearLayout>
